--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 	"bugs": {
 		"url": ""
 	},
-	"homepage": "",
+	"homepage": "https://github.com/crackbob/Minebuns",
+	"supportURL": "https://github.com/crackbob/Minebuns",
 	"devDependencies": {
 		"@babel/core": "^7.26.0",
 		"@babel/preset-env": "^7.26.0",
@@ -27,5 +28,8 @@
 		"style-loader": "^4.0.0",
 		"webpack": "^5.97.1",
 		"webpack-cli": "^6.0.1"
+	},
+	"dependencies": {
+		"webpack-userscript": "^3.2.3"
 	}
 }
